@@ -1,4 +1,4 @@
-$NetBSD: distinfo,v 1.4 2003/10/01 18:45:35 kristerw Exp $
+$NetBSD: distinfo,v 1.5 2004/07/24 00:36:51 hubertf Exp $
 
 SHA1 (dnetc-darwin-ppc.tar.gz) = 4af6fac50c0ca5256cf5f6622f9aba39348cfcfc
 Size (dnetc-darwin-ppc.tar.gz) = 193437 bytes
@@ -8,9 +8,9 @@ SHA1 (dnetc-netbsd-alpha-elf.tar.gz) = ebddc524ccbbd9d72031a036ceb320a60c4a9059
 Size (dnetc-netbsd-alpha-elf.tar.gz) = 446179 bytes
 SHA1 (dnetc-netbsd-arm32.tar.gz) = da5f79ea1bc84a1e3a7a5a36c9e77e38ae6f477e
 Size (dnetc-netbsd-arm32.tar.gz) = 190196 bytes
-SHA1 (dnetc-netbsd-i386-elf.tar.gz) = 689b2d51134725fb3865ca5c2c47e1d73b62dc32
-Size (dnetc-netbsd-i386-elf.tar.gz) = 319938 bytes
 SHA1 (dnetc-netbsd-sparc-elf.tar.gz) = b67f38b83dfef47d86a8e9d3f14da3a8cf55f3e5
 Size (dnetc-netbsd-sparc-elf.tar.gz) = 351309 bytes
 SHA1 (dnetc-solaris-sparc.tar.gz) = 38a1ab8ce7e79bbe2f252ef0883c50ac77690bb2
 Size (dnetc-solaris-sparc.tar.gz) = 229217 bytes
+SHA1 (dnetc-netbsd-x86-elf.tar.gz) = 865904205f1edc90b18fc5c61e0ef0747172e2e9
+Size (dnetc-netbsd-x86-elf.tar.gz) = 345470 bytes
