@@ -1,4 +1,4 @@
-$NetBSD: CHANGES,v 1.6661 2004/07/24 00:16:49 hubertf Exp $
+$NetBSD: CHANGES,v 1.6662 2004/07/24 00:36:51 hubertf Exp $
 
 Changes to the packages collection and infrastructure in 2004:
 
@@ -3532,3 +3532,4 @@ Changes to the packages collection and infrastructure in 2004:
 	Updated ntp to 4.2.0nb4 [xtraeme 2004-07-23]
 	Updated openntpd to 20040719pnb1 [xtraeme 2004-07-23]
 	Updated centericq to 4.10.0 [hubertf 2004-07-24]
+	Updated dnetc to 2.9007.486 [hubertf 2004-07-24]
